// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs.vue should render empty tabs 1`] = `
<div
  class="hue-tabs"
>
  <ul />
   
  <div
    class="hue-tab-container"
  />
</div>
`;

exports[`Tabs.vue should render tabs 1`] = `
<div
  class="hue-tabs"
>
  <ul>
    <li
      class="active"
    >
      
      foo
    
    </li>
    <li
      class=""
    >
      
      bar
    
    </li>
  </ul>
   
  <div
    class="hue-tab-container"
  >
    <div
      style=""
    >
      foo
    </div>
    <div
      style="display: none;"
    >
      bar
    </div>
  </div>
</div>
`;
